-bug: Remove warnings appear in the httpd log relative to reset attempts on settings array
-bug: Graph Export would fail while zooming on some systems
-bug: Add API Automation tool quietMode to additional functions
-bug: SNMP string cleanup removes too many '=' signs
-bug: When Cacti is launched from within an iframe, cookies are dropped from IE6
-bug: database upgrade and cacti.sql differ
-feature#0001205: add filtering and pagination to cdef management; add "Duplicate CDEF"
-feature#0001201: Reapply Suggested Names for Data Sources and cli/poller_data_sources_reapply_names.php
-feature#0001195: add graph title to graphs page
-feature#0001189: Introducing |data_source_title| variable
-feature: add links to Graph Management and Data Sources to Device Edit Screen
-feature: add links to Graph Template and Host Edit to Graph Edit Screen
-feature: add links to Data Template and Host Edit to Data Source Edit Screen
-feature: support using the cacti database api with more than one connection
-feature: Add some more debug lines to Data Query debugging (Verbose Query)
-feature: Fix compatibility issues for RRDTool 1.3

0.8.7b
-bug#0000855: Unnecessary (and faulty) DEF generation for CF:AVERAGE
-bug#0001083: Small visual fix for Cacti in "View Cacti Log File"
-bug#0001089: Graph xport modification to increase default rows output
-bug#0001091: Poller incorrectly identifies unique hosts
-bug#0001093: CLI Scripts bring MySQL down on large installations
-bug#0001094: Filtering broken on Data Sources page
-bug#0001103: Fix looping poller recache events
-bug#0001107: ss_fping.php 100% "Pkt Loss" does not work properly
-bug#0001114: Graphs with no template and/or no host cause filtering errors on Graph Management page
-bug#0001115: View Poller Cache does not show Data Sources that have no host
-bug#0001118: Graph Generation fails if e.g. ifDescr contains some blanks
-bug#0001132: TCP/UDP ping port ignored
-bug#0001133: Downed Device Detection: None leads to database errors